fixed media query for 1060. portfolio title text was clipping off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,11 +320,9 @@ input[type=submit] {
     .connect {
         width: 35%;
     }
-/*    .letterhead {
-        width: 25%;
-        font-size: 15px;
+    h2.projecttitle {
+        font-size: 16px;
     }
-}*/
 
 @media only screen and (max-width: 960px) {
     .maincontent {
